tests/baselines/reference/asiPreventsParsingAsInterface03.errors.txt
asiPreventsParsingAsInterface03.ts(1,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
asiPreventsParsingAsInterface03.ts(4,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.


==== asiPreventsParsingAsInterface03.ts (2 errors) ====
    var interface: number, I: string;
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    
    namespace n {
        interface   // This should be the identifier 'interface'
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
        I           // This should be the identifier 'I'
        {}          // This should be a block body
    }